Fix save/restore of form control contents when reloading (bug 294258). r=sicking, sr=bzbarsky.